Add comment in index.html

--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
         <div id="root"></div>
         <script src="index.pack.js"></script>
     </body>
+    <!-- /hello Nishant bhai -->
 </html>
