Add comment for Nishant bhai in index.html

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
         <script src="index.pack.js"></script>
     </body>
     <!-- /hello Nishant bhai -->
+     <!-- hello Nishant bhai kaise ho?-->
 </html>
